// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentSearchesPanel Show More button is shown if more pages are available 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    test
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-08 5:36:52 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    sourcegraph
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-04 6:44:39 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-center py-3"
      >
        <button
          class="btn btnLink"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecentSearchesPanel Show More button loads more items 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    test
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-08 5:36:52 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    sourcegraph
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-04 6:44:39 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-center py-3"
      >
        <button
          class="btn btnLink"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecentSearchesPanel consecutive identical searches are correctly merged when rendered 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    test
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-08 5:36:52 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    sourcegraph
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-04 6:44:39 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecentSearchesPanel searches with no argument are skipped 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    test
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-08 5:36:52 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    sourcegraph
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-tooltip="2020-09-04 6:44:30 PM"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
